Fixed H3 on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -365,7 +365,7 @@ footer {
     h2 {
         font-size: 1.2rem;
     }
-    .h3 {
+    h3 {
         font-size: 1.6rem;
         padding: 2rem 1rem 1rem 1rem;
     }
